<resources
    xmlns:tools="http://schemas.android.com/tools" tools:locale="en">


    <array name="tab_name">
        <item>Home</item>
        <item>Food</item>
        <item>Water</item>
        <item>Reminder</item>
        <item>Pedometer</item>
    </array>


    <string-array name="tips_array">
    <item>You are severely underweight. It is a sign that you\'re not eating enough or you may be ill.</item>
    <item>You are underweight So you may need to put on some weight. </item>
    <item>You are at a healthy weight for your height. You lower your risk of developing serious health problems.</item>
    <item>You are slightly overweight. You may be advised to lose some weight for health reasons.</item>
    <item>You are heavily overweight. Your health may be at risk if you do not lose weight.</item>
    </string-array>

    <string name="app_name">Super Healthy App</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">START</string>

    <string name="slide_1_title">Welcome!</string>
    <string name="slide_1_desc">SuperHealthy is here to help you stay healthy and take care of yourself.</string>

    <string name="slide_2_title">Calorie and Water Tracking</string>
    <string name="slide_2_desc">Track the amount of calories and water you consume daily</string>

    <string name="slide_3_title">Step counter</string>
    <string name="slide_3_desc">Track the number of steps you make daily</string>

    <string name="slide_4_title">Reminder</string>
    <string name="slide_4_desc">Monitor your important activities and schedule it with notification/alerts</string>


    <string name= "grams">Grams: 100</string>
    <string name= "goal"> Goal</string>
    <string name="home_fragment">Home</string>
    <string name="reminder_fragment">Reminder </string>
    <string name="food_fragment">Food </string>
    <string name="water_fragment">Water </string>
    <string name="out_of_range">Please enter a valid variable</string>
    <string name="bmi_type_error">Please enter your height</string>
    <string name="bmi_input_request">Please select your weight and height from the below ranges  </string>
    <string name="welcome_text">Welcome !</string>
    <string name="profile_home">Home</string>
    <string name="content_show_bmi">Your BMI result is :</string>
    <string name="default_show_bmi">BMI :</string>
    <string name="content_show_result">Show Results</string>
    <string name="default_show_result">Results :</string>
    <string name="text_label_kg">Kg</string>
    <string name="text_label_m">CM</string>
    <string name="text_button_calculate">CALCULATE</string>
    <string name="weight">Weight</string>
    <string name="Height">Height</string>
    <string name="title_home">Home</string>
    <string name="title_reminder">Reminder</string>
    <string name="title_food">Food</string>
    <string name="title_water">Water</string>
    <string name="text_button_proceed">PROCEED</string>
    <string name="required_amount_of_water">Super Healthy recommends you to consume  </string>
    <string name="liter">Liter</string>
    <string name="goal_reached_notification">Goal reached! %s steps and counting</string>
    <string name="notification_text">%s steps to go</string>
    <string name="notification_title">Pedometer is counting</string>
    <string name="your_progress_will_be_shown_here_soon">Your progress will be shown here soon</string>
    <string name="record">Record</string>
    <string name="total_last_7_days">Total last 7 days</string>
    <string name="average_last_7_days">Average last 7 days</string>
    <string name="reminder_title">Title</string>
    <string name="reminder_text">Alarm Message</string>
    <string name="reminder_amount">Alarm frequency</string>
    <string name="set_alarm">Set alarm</string>
    <string name="set_reminder">Set reminder </string>
    <string name="utc">00:00 UTC</string>
    <string name="choose_notify">Send Notification</string>
    <string name="not_set">Not Set</string>
    <string name="time_format">HH:mm</string>
    <string name="dateFormat">dd/MM/yyyy</string>
    <string name="pick_hour">Pıck Hour</string>
    <string name="delete">DELETE</string>
    <string name="edit">UPDATE</string>
    <string name="negative">NO</string>
    <string name="positive">YES</string>
    <string name="selected_value_removed">Alarm removed from your list</string>
    <string name="message">MESSAGE</string>
    <string name="dateTime_text">DATE</string>
    <string name="alert_type">Alert Type</string>
    <string name="notification">Notification</string>
    <string name="alert">Alarm</string>
    <string name="are_you_sure_want_to_delete">Are you sure you want to remove selected reminder ? </string>
    <string name="warning">Warning</string>
    <string name="pick_target">Select Target</string>
    <string name="title_pedometer">Pedometer</string>
    <string name="ten_thousand">10.000</string>
    <string name="steps">steps</string>
    <string name="average">Average</string>
    <string name="total">Total</string>
    <string name="_50">50</string>
    <string name="_500">500</string>
    <string name="value_time_format">%02d:%02d:%02d</string>
    <string name="no_sensor">Sensor not found</string>
    <string name="no_sensor_explain">There is no sensor for your device</string>
    <string name="highest">Highest</string>
    <string name="weekly_total">Weekly Total</string>
    <string name="weekly_average">Weekly Average</string>
    <string name="monthly_total">Monthly Total</string>
    <string name="monthly_average">Monthly Average</string>
    <string name="ok">OK</string>
    <string name="daily_target_completed">Target Completed</string>

    <string name="language_preferences">Language</string>
    <string name="calories">Calories</string>
    <string name="water">Water</string>
    <string name="reminder">Reminder</string>
    <string name="total_steps">Total Steps</string>
    <string name="total_calories">Total Calories</string>
    <string name="romanian">Romana</string>
    <string name="english">English</string>
    <string name="pick_language">Select Language</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="editing_complete">Editing has been completed.</string>
    <string name="alarm_has_been_set">The alarm has been set</string>
    <string name="about">About</string>
    <string name="add_value">Add Water (mL)</string>
    <string name="_250ml">250mL</string>
    <string name="_330ml">330mL</string>
    <string name="_500ml">500mL</string>
    <string name="_1l">1L</string>
    <string name="search">Search : </string>
    <string name="add">ADD</string>
    <string name="food_added_calory">Food has been added to your Calory list.</string>
    <string name="add_calory">Add Calory</string>
    <string name="restart_device">Please switch a tab, to finalise the exchange.</string>
    <string name="water_amount_added">Amount has been added.</string>



    <string name="amount_has_been_removed">Amount has been removed. </string>
    <string name="target">Target</string>

    <string name="clean">Clean</string>
    <string name="sure_to_clean">Are you sure you want to clean data ? </string>
</resources>